# ChronoInTime

./: CMakeLists.txt  README.md
include/: commons.h  currentState.h  person.h  room.h  update.h
src/: commons.cpp  main.cpp
src/concepts/: currentState.cpp
src/configs/: config.cpp
src/configs/include/: config.h
src/gameobjects/: person.cpp  room.cpp
src/gamestates/: update.cpp
